--- a/helloTest.java/.classpath
+++ b/helloTest.java/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/Users/russellarnold/Downloads/simplenlg-v442/simplenlg-v4.4.2.jar"/>
+	<classpathentry kind="lib" path="/Users/russellarnold/Desktop/spost files/stanford-postagger-2014-01-04/stanford-postagger.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
